--- a/pytest.ini
+++ b/pytest.ini
@@ -2,10 +2,11 @@
 
 log_cli = True
 log_cli_date_format = %Y-%m-%d %H:%M:%S
+log_cli_level = INFO
 
-log_file = results/pytest3.log
+log_level = INFO
 
-addopts = -ra -q
+addopts = -rA 
 testpaths =
     tests
 
